--- a/sass/_home.sass
+++ b/sass/_home.sass
@@ -91,6 +91,7 @@ ul.nav_shop
     width: 100%
     height: 400px
     background: url('../images/banner.jpg')
+    background-attachment: fixed
     padding: 40px 0
     color: #ffffff
     font-family: $lato
@@ -146,6 +147,7 @@ footer
     background: $blue
     background-position: center
     background-size: cover
+    overflow: hidden
     .bar_footer
         width: 100%
         height: 35px
