--- a/sass/main.css
+++ b/sass/main.css
@@ -141,6 +141,7 @@ ul.nav_shop .nav-item .nav-link img {
   width: 100%;
   height: 400px;
   background: url("../images/banner.jpg");
+  background-attachment: fixed;
   padding: 40px 0;
   color: #ffffff;
   font-family: "Lato", sans-serif;
@@ -231,6 +232,7 @@ footer {
   background: #191E2B;
   background-position: center;
   background-size: cover;
+  overflow: hidden;
 }
 
 footer .bar_footer {
